fixed about text alignment.

--- a/scss/components/_about-section.scss
+++ b/scss/components/_about-section.scss
@@ -1,5 +1,7 @@
 .about-text-wrapper {
     p {
+        text-align: left;
+        
         @media(min-width: 980px) {
             max-width: 70%;
             align-self: center;
